--- a/Source Code/C#/CardProcessingApi/CardProcessing.Business/CardProcessing.Business.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessing.Business/CardProcessing.Business.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Account\AccountService.cs" />
+    <Compile Include="Services\Account\IAccountService.cs" />
     <Compile Include="Services\IValueService.cs" />
     <Compile Include="Services\ValueService.cs" />
   </ItemGroup>
