--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.DataAccess/CardProcessingApi.DataAccess.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.DataAccess/CardProcessingApi.DataAccess.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7431EDA9-728F-4492-8635-3EB5FDC87BD8}</ProjectGuid>
+    <ProjectGuid>{CD566EC3-19DD-4694-8E6F-2CB8CA462F06}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CardProcessing.Business</RootNamespace>
-    <AssemblyName>CardProcessing.Business</AssemblyName>
+    <RootNamespace>CardProcessingApi.DataAccess</RootNamespace>
+    <AssemblyName>CardProcessingApi.DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,7 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,23 +50,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="GenericRepository.cs" />
+    <Compile Include="IGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Account\AccountService.cs" />
-    <Compile Include="Services\Account\IAccountService.cs" />
-    <Compile Include="Services\IValueService.cs" />
-    <Compile Include="Services\Location\ILocationService.cs" />
-    <Compile Include="Services\Location\LocationService.cs" />
-    <Compile Include="Services\ValueService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CardProcessingApi.DataAccess\CardProcessingApi.DataAccess.csproj">
-      <Project>{cd566ec3-19dd-4694-8e6f-2cb8ca462f06}</Project>
-      <Name>CardProcessingApi.DataAccess</Name>
-    </ProjectReference>
     <ProjectReference Include="..\CardProcessingApi.Data\CardProcessingApi.Data.csproj">
-      <Project>{a3bf36b2-d393-4f8b-a791-b16f959d0197}</Project>
+      <Project>{A3BF36B2-D393-4F8B-A791-B16F959D0197}</Project>
       <Name>CardProcessingApi.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
