--- a/Source Code/C#/CardProcessingApi/CardProcessing.Business/CardProcessing.Business.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessing.Business/CardProcessing.Business.csproj
@@ -41,14 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Account\AccountService.cs" />
-    <Compile Include="Services\Account\IAccountService.cs" />
-    <Compile Include="Services\IValueService.cs" />
-    <Compile Include="Services\Location\ILocationService.cs" />
-    <Compile Include="Services\Location\LocationService.cs" />
-    <Compile Include="Services\ValueService.cs" />
+    <Compile Include="BusinessLogic\Account\UserLogic.cs" />
+    <Compile Include="BusinessLogic\Account\IUserLogic.cs" />
+    <Compile Include="BusinessLogic\AgentLogic\AgentLogic.cs" />
+    <Compile Include="BusinessLogic\AgentLogic\IAgentLogic.cs" />
+    <Compile Include="BusinessLogic\Location\ILocationLogic.cs" />
+    <Compile Include="BusinessLogic\Location\LocationLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CardProcessingApi.DataAccess\CardProcessingApi.DataAccess.csproj">
