Complete authentication api + Repository Pattern Add AutoMapping lib

--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Data/App.config
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Data/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CardProcessingEntities" connectionString="metadata=res://*/CardProcessing.csdl|res://*/CardProcessing.ssdl|res://*/CardProcessing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CSCVIEAH767810\SQLEXPRESS2014;initial catalog=card_processing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CardProcessingEntities" connectionString="metadata=res://*/CardProcessing.csdl|res://*/CardProcessing.ssdl|res://*/CardProcessing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS2014;initial catalog=card_processing;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
