--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Data/CardProcessingApi.Data.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Data/CardProcessingApi.Data.csproj
@@ -80,6 +80,9 @@
     <Compile Include="District.cs">
       <DependentUpon>CardProcessing.tt</DependentUpon>
     </Compile>
+    <Compile Include="LogRecord.cs">
+      <DependentUpon>CardProcessing.tt</DependentUpon>
+    </Compile>
     <Compile Include="Merchant.cs">
       <DependentUpon>CardProcessing.tt</DependentUpon>
     </Compile>
