--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
@@ -65,6 +65,10 @@
       <HintPath>..\packages\Autofac.WebApi2.Owin.4.0.0\lib\net45\Autofac.Integration.WebApi.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -228,14 +232,19 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AgentController.cs" />
+    <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Framework\DependencyRegister.cs" />
-    <Compile Include="Framework\IdentityModels.cs" />
+    <Compile Include="Framework\Extension\ModelStateDictionaryExtensions.cs" />
+    <Compile Include="Framework\Filters\RoleAuthorizeAttribute.cs" />
+    <Compile Include="Framework\ModelMapping\AutoMapperConfiguration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AgentBindingModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
@@ -312,6 +321,10 @@
     <ProjectReference Include="..\CardProcessing.Business\CardProcessing.Business.csproj">
       <Project>{7431eda9-728f-4492-8635-3eb5fdc87bd8}</Project>
       <Name>CardProcessing.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CardProcessingApi.Core\CardProcessingApi.Core.csproj">
+      <Project>{FFBB2D07-382F-4DBC-9885-75CCC59146EC}</Project>
+      <Name>CardProcessingApi.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\CardProcessingApi.DataAccess\CardProcessingApi.DataAccess.csproj">
       <Project>{cd566ec3-19dd-4694-8e6f-2cb8ca462f06}</Project>
