--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/packages.config
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net45" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
