Integrate AutoFac with CommonServiceLocator for global IoC resolving

--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/Web.config
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CardProcessingApi.Web-20170509121122.mdf;Initial Catalog=aspnet-CardProcessingApi.Web-20170509121122;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CardProcessingEntities" connectionString="metadata=res://*/CardProcessing.csdl|res://*/CardProcessing.ssdl|res://*/CardProcessing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS2014;initial catalog=card_processing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CardProcessingEntities" connectionString="metadata=res://*/CardProcessing.csdl|res://*/CardProcessing.ssdl|res://*/CardProcessing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CSCVIEAH767810\SQLEXPRESS2014;initial catalog=card_processing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings />
   <!--
