--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/packages.config
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/packages.config
@@ -2,12 +2,14 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="Autofac" version="4.0.0" targetFramework="net452" />
+  <package id="Autofac.Extras.CommonServiceLocator" version="4.0.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net452" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net45" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
   <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
