--- a/Source Code/C#/Client Form/FC-MST/CPClient.Core/CPClient.Core.csproj
+++ b/Source Code/C#/Client Form/FC-MST/CPClient.Core/CPClient.Core.csproj
@@ -49,8 +49,13 @@
     <Compile Include="AppConfigHelper.cs" />
     <Compile Include="AppContext.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="Models\DistrictModels.cs" />
+    <Compile Include="Models\ProvinceModels.cs" />
     <Compile Include="Models\SessionState.cs" />
+    <Compile Include="Models\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebEngine.cs" />
+    <Compile Include="WebServiceUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
