Completed role claim attribute authorize. Add class helpers for web service calls (POST)

--- a/Source Code/C#/Client Form/FC-MST/CPClient.Business/CPClient.Business.csproj
+++ b/Source Code/C#/Client Form/FC-MST/CPClient.Business/CPClient.Business.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CPClient.Business</RootNamespace>
     <AssemblyName>CPClient.Business</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,6 +44,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="LocationLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CPClient.Core\CPClient.Core.csproj">
+      <Project>{2FECAB01-1107-477F-9740-1A85816CDA83}</Project>
+      <Name>CPClient.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
