Cap nhat -- chuc nang xem thong tin Agent

--- a/Source Code/Java/WC-MCAG/WC-MCAG/WC-MCAG.csproj
+++ b/Source Code/Java/WC-MCAG/WC-MCAG/WC-MCAG.csproj
@@ -230,6 +230,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AgentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -241,6 +242,7 @@
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Views\User\Login.cshtml" />
+    <Content Include="Views\Agent\Agent.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
