--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/Web.config
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/Web.config
@@ -6,11 +6,12 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CardProcessingApi.Web-20170509121122.mdf;Initial Catalog=aspnet-CardProcessingApi.Web-20170509121122;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CardProcessingEntities" connectionString="metadata=res://*/CardProcessing.csdl|res://*/CardProcessing.ssdl|res://*/CardProcessing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS2014;initial catalog=card_processing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CardProcessingEntities" connectionString="metadata=res://*/CardProcessing.csdl|res://*/CardProcessing.ssdl|res://*/CardProcessing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FAPKT5B;initial catalog=DBCardProcess;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings />
   <!--
@@ -30,13 +31,14 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-    
-  <handlers>
+
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
