Create Merchant Model with AutoMapper

--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\ConfigurationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MerchantController.cs" />
     <Compile Include="Framework\DependencyRegister.cs" />
     <Compile Include="Framework\Extension\ModelStateDictionaryExtensions.cs" />
     <Compile Include="Framework\Filters\RoleAuthorizeAttribute.cs" />
@@ -283,6 +284,7 @@
     <Compile Include="Models\CommonViewModels.cs" />
     <Compile Include="Models\ConfigurationModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\MerchantBindingModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
