--- a/Source Code/C#/CardProcessingApi/CardProcessing.Business/CardProcessing.Business.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessing.Business/CardProcessing.Business.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="BusinessLogic\ConfigurationLogic.cs" />
     <Compile Include="BusinessLogic\IConfigurationLogic.cs" />
+    <Compile Include="BusinessLogic\MerchantLogic\IMerchantLogic.cs" />
+    <Compile Include="BusinessLogic\MerchantLogic\MerchantLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BusinessLogic\Account\UserLogic.cs" />
     <Compile Include="BusinessLogic\Account\IUserLogic.cs" />
