--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Core/CardProcessingApi.Core.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Core/CardProcessingApi.Core.csproj
@@ -48,7 +48,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="CommonHelper.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Paging\IPagedList.cs" />
+    <Compile Include="Paging\PagingFilter.cs" />
+    <Compile Include="Paging\PagedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search\AgentSearchCriteria.cs" />
+    <Compile Include="Search\BaseSearchCriteria.cs" />
     <Compile Include="WorkingUser.cs" />
   </ItemGroup>
   <ItemGroup>
