--- a/Source Code/C#/Client Form/FC-MST/CPClient.Core/CPClient.Core.csproj
+++ b/Source Code/C#/Client Form/FC-MST/CPClient.Core/CPClient.Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AppContext.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="DataExtensions.cs" />
+    <Compile Include="HttpUtils.cs" />
     <Compile Include="Models\AgentModels.cs" />
     <Compile Include="Models\DistrictModels.cs" />
     <Compile Include="Models\MerchantModel.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Models\Constants.cs" />
     <Compile Include="Models\TypeMerchantModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchCriteria\AgentSearchCriteria.cs" />
     <Compile Include="ServiceCallException.cs" />
     <Compile Include="WebEngine.cs" />
     <Compile Include="WebServiceUtils.cs" />
